# liboca

./: .appveyor.yml  .travis.sh  .travis.yml  CMakeLists.txt  IDEAS.md  Makefile  README.md
cmake/: CheckCCompilerFlag.txt  Lint.txt
include/: oca.h
src/: oca.c
tests/: CMakeLists.txt  simple.c
